services/gull/overlays/local-homelab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gull
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: gull.local.aeoly.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gull
                port:
                  number: 8081
